Updating file via DataCamp: course.yml

--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title            : The Best Course
+title            : A Good Course
 instructors      :
  - vincent@datacamp.com
 description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
