--- a/course.yml
+++ b/course.yml
@@ -1,7 +1,7 @@
-title            : A course
+title            : The course
 instructors      :
  - vincent@datacamp.com
 description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
 university       : DataCamp
-difficulty_level : 2
+difficulty_level : 3
 time_needed      : 1 hour
