--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title            : Awesome coursea
+title            : Awesome coursea hahahaha
 instructors      :
  - vincent@datacamp.com
 description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
