--- a/course.yml
+++ b/course.yml
@@ -1,7 +1,7 @@
-title            : Awesome coursea 
+title            : Awesome coursea hahahaha
 instructors      :
  - vincent@datacamp.com
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
+description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course. blablabla
 university       : DataCamp
 difficulty_level : 2test
 time_needed      : 1 hour
