--- a/course.yml
+++ b/course.yml
@@ -3,5 +3,5 @@ instructors      :
  - vincent@datacamp.com
 description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course. blablabla
 university       : DataCamp
-difficulty_level : 2test
+difficulty_level : 2
 time_needed      : 1 hour
