Updating files via DataCamp: course.yml

--- a/course.yml
+++ b/course.yml
@@ -4,4 +4,4 @@ instructors      :
 description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course. blablabla
 university       : DataCamp
 difficulty_level : 2
-time_needed      : 2 hours of time
+time_needed      : 2 hours of times
