--- a/course.yml
+++ b/course.yml
@@ -5,4 +5,4 @@ description      : This is an automatically generated demo course which will hel
 
 university       : DataCamp
 difficulty_level : 2
-time_needed      : 2 hours of times
+time_needed      : 2 hours of timesa
