Updating files via DataCamp: course.yml

--- a/course.yml
+++ b/course.yml
@@ -4,5 +4,5 @@ instructors      :
 description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course. blablabla
 
 university       : DataCamp
-difficulty_level : 2
+difficulty_level : 2s
 time_needed      : 2 hours of timesa
